// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Modal/ModalFooterOKCancel AnnulerValider smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Annuler
    </button>
    <button type="submit"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</div>
`;

exports[`design-system/Modal/ModalFooterOKCancel CustomLabels smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="button"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Dismiss
    </button>
    <button type="submit"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      OK
    </button>
  </div>
</div>
`;

exports[`design-system/Modal/ModalFooterOKCancel Valider smoke-test 1`] = `
<div class="mt-4">
  <div class="flex gap-4 flex-wrap justify-end">
    <button type="submit"
            class="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6"
    >
      Valider
    </button>
  </div>
</div>
`;
